[package]
name = "nust-printer"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winspool", "minwindef", "winbase", "winnt"] }
libc = "0.2"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
